; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_play_screenshot_flash.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/widgets/extr_menu_widgets.c_menu_widgets_play_screenshot_flash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { float, i32*, i32, i32*, i32, i32, i32 }

@menu_widgets_screenshot_fadeout = common dso_local global i32 0, align 4
@SCREENSHOT_DURATION_IN = common dso_local global i32 0, align 4
@EASING_IN_QUAD = common dso_local global i32 0, align 4
@screenshot_alpha = common dso_local global i32 0, align 4
@menu_widgets_generic_tag = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @menu_widgets_play_screenshot_flash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_widgets_play_screenshot_flash() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = load i32, i32* @menu_widgets_screenshot_fadeout, align 4
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 6
  store i32 %2, i32* %3, align 8
  %4 = load i32, i32* @SCREENSHOT_DURATION_IN, align 4
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 5
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @EASING_IN_QUAD, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 4
  store i32 %6, i32* %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  store i32* @screenshot_alpha, i32** %8, align 8
  %9 = load i32, i32* @menu_widgets_generic_tag, align 4
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store float 1.000000e+00, float* %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  store i32* null, i32** %12, align 8
  %13 = call i32 @menu_animation_push(%struct.TYPE_3__* %1)
  ret void
}

declare dso_local i32 @menu_animation_push(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
